--- a/admin.html
+++ b/admin.html
@@ -218,8 +218,16 @@
       <br>
 
       <div class="card-panel">
-        <div class="row">
-          <input id="new-badge-name" class="text-input" type="text" placeholder="Badge name" />
+        <div class="row" style="flex-wrap:wrap">
+          <input id="new-badge-id" class="text-input" type="text" placeholder="ID" />
+          <input id="new-badge-name" class="text-input" type="text" placeholder="Name" />
+          <input id="new-badge-desc" class="text-input" type="text" placeholder="Description" />
+          <input id="new-badge-color" class="text-input" type="color" value="#ffffff" />
+          <input id="new-badge-priority" class="text-input" type="number" placeholder="Priority" />
+          <input id="new-badge-role" class="text-input" type="text" placeholder="Discord Role ID" />
+          <label class="row" style="align-items:center;gap:.25rem">
+            <input type="checkbox" id="new-badge-is-system"> System
+          </label>
           <button class="invite" id="btn-create-badge">Create Badge</button>
         </div>
       </div>
@@ -246,14 +254,20 @@
           <table class="table" aria-label="Badges table">
             <thead>
               <tr>
-                <th>Badge ID</th>
+                <th>ID</th>
                 <th>Name</th>
+                <th>Description</th>
+                <th>Color</th>
+                <th>Priority</th>
+                <th>System</th>
+                <th>Created</th>
+                <th>Discord Role ID</th>
                 <th class="right">Actions</th>
               </tr>
             </thead>
             <tbody id="badges-tbody">
               <tr>
-                <td colspan="3" class="muted">No badges yet.</td>
+                <td colspan="9" class="muted">No badges yet.</td>
               </tr>
             </tbody>
           </table>
@@ -383,20 +397,27 @@
 
     // ---------- Badges manager (local only) ----------
     const badges = [];
-    let nextBadgeId = 1;
     const userBadges = {};
 
     function renderBadges() {
       const tbody = document.getElementById('badges-tbody');
       if (!tbody) return;
       if (!badges.length) {
-        tbody.innerHTML = `<tr><td colspan="3" class="muted">No badges yet.</td></tr>`;
+        tbody.innerHTML = `<tr><td colspan="9" class="muted">No badges yet.</td></tr>`;
         return;
       }
       tbody.innerHTML = badges.map(b => `
         <tr data-badge-id="${b.id}">
           <td><span class="pill">${b.id}</span></td>
           <td>${b.name}</td>
+          <td>${b.description || '—'}</td>
+          <td>
+            <span class="pill" style="background:${b.color};border-color:#6664">${b.color}</span>
+          </td>
+          <td>${b.priority ?? 0}</td>
+          <td>${b.is_system ? 'Yes' : 'No'}</td>
+          <td>${fmtDate(b.created_at)}</td>
+          <td>${b.discord_role_id || '—'}</td>
           <td class="right"><button class="invite btn-badge-delete" data-id="${b.id}">Delete</button></td>
         </tr>
       `).join('');
@@ -424,8 +445,8 @@
       }).join('');
     }
 
-    function createBadge(name) {
-      badges.push({ id: nextBadgeId++, name });
+    function createBadge(data) {
+      badges.push(data);
       renderBadges();
       renderAssignments();
     }
@@ -582,18 +603,49 @@
 
       // Badges actions
       document.getElementById('btn-create-badge').addEventListener('click', () => {
-        const input = document.getElementById('new-badge-name');
-        const name = (input.value || '').trim();
-        if (!name) return alert('Enter a badge name first.');
-        createBadge(name);
-        input.value = '';
+        const idInput = document.getElementById('new-badge-id');
+        const nameInput = document.getElementById('new-badge-name');
+        const descInput = document.getElementById('new-badge-desc');
+        const colorInput = document.getElementById('new-badge-color');
+        const prioInput = document.getElementById('new-badge-priority');
+        const roleInput = document.getElementById('new-badge-role');
+        const sysInput = document.getElementById('new-badge-is-system');
+
+        const id = (idInput.value || '').trim();
+        const name = (nameInput.value || '').trim();
+        const description = (descInput.value || '').trim();
+        const color = colorInput.value || '#ffffff';
+        const priority = Number(prioInput.value) || 0;
+        const discordRoleId = (roleInput.value || '').trim();
+        const isSystem = sysInput.checked;
+        if (!id || !name) return alert('Enter both ID and name.');
+        if (badges.some(b => b.id === id)) return alert('ID already exists.');
+
+        createBadge({
+          id,
+          name,
+          description,
+          color,
+          priority,
+          is_system: isSystem,
+          created_at: new Date().toISOString(),
+          discord_role_id: discordRoleId
+        });
+
+        idInput.value = '';
+        nameInput.value = '';
+        descInput.value = '';
+        colorInput.value = '#ffffff';
+        prioInput.value = '';
+        roleInput.value = '';
+        sysInput.checked = false;
       });
 
       document.getElementById('badges-tbody').addEventListener('click', (ev) => {
         const btn = ev.target.closest('.btn-badge-delete');
         if (!btn) return;
-        const id = Number(btn.getAttribute('data-id'));
-        if (isNaN(id)) return;
+        const id = btn.getAttribute('data-id');
+        if (!id) return;
         if (!confirm('Delete this badge?')) return;
         deleteBadge(id);
       });
@@ -603,8 +655,8 @@
 
       document.getElementById('btn-assign-badge').addEventListener('click', () => {
         const uid = (userInput.value || '').trim();
-        const bid = Number(badgeInput.value);
-        if (!uid || isNaN(bid)) return alert('Enter both user ID and badge ID.');
+        const bid = (badgeInput.value || '').trim();
+        if (!uid || !bid) return alert('Enter both user ID and badge ID.');
         if (!badges.find(b => b.id === bid)) return alert('Badge ID not found.');
         assignBadge(uid, bid);
         userInput.value = '';
@@ -613,8 +665,8 @@
 
       document.getElementById('btn-unassign-badge').addEventListener('click', () => {
         const uid = (userInput.value || '').trim();
-        const bid = Number(badgeInput.value);
-        if (!uid || isNaN(bid)) return alert('Enter both user ID and badge ID.');
+        const bid = (badgeInput.value || '').trim();
+        if (!uid || !bid) return alert('Enter both user ID and badge ID.');
         unassignBadge(uid, bid);
         userInput.value = '';
         badgeInput.value = '';
